--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,15 @@
     <div class="posicion1">
         <canvas id=canvas width="200" height="400"></canvas>
     </div>
+    <div class="info">
+        <img src="../trama1.jpg" id="imagenTetromino" width="0" height="0">
+        <div><button class="boton" onclick="reinicio()">Reinicio</button></div>
+        <p></p>
+        <div><button class="boton" onclick="pausa()">Pausa</button></div>
+        <p></p>
+        <div ><button class="boton" onclick="seguir()">Retomar</button></div>
+
+    </div>
 </div>
 <script src="../tetris.js"></script>
 </body>
