tetris beta 1.0 *mejoras de esta actualización: - Se eliminan las filas completas. - Sistema de puntuación añadido: la eliminación de filas suma puntos. - Función de eventos de teclado actualizada. *corrección de errores: - Se ha arreglado el css: contenido centrado y eliminación de errores. *proximo objetivo: -hacer una función para finalizar el juego. -reanalizar el diseño del código.

--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Tetris</title>
     <link href="../style.css" rel="stylesheet" type="text/css">
-
+    <meta charset="UTF-8"/>
 </head>
 <body>
 <div class="title">Tetris</div>
@@ -18,7 +18,12 @@
         <div><button class="boton" onclick="pausa()">Pausa</button></div>
         <p></p>
         <div ><button class="boton" onclick="seguir()">Retomar</button></div>
+        <p></p>
+        <div ><button class="boton2"><div id="puntuacion"> </div></button></div>
 
+        <br><br><br><br><br><br>
+        <p>Movimiento: a-s-d</p>
+        <p>Rotación: q</p>
     </div>
 </div>
 <script src="../tetris.js"></script>
