Tetris beta 1.1 *razón de esta actualización: añadida funcionalidad de fin del juego.

--- a/html/index.html
+++ b/html/index.html
@@ -20,8 +20,9 @@
         <div ><button class="boton" onclick="seguir()">Retomar</button></div>
         <p></p>
         <div ><button class="boton2"><div id="puntuacion"> </div></button></div>
-
-        <br><br><br><br><br><br>
+        <br><br>
+        <div id="mensaje"><br></div>
+        <br><br><br>
         <p>Movimiento: a-s-d</p>
         <p>Rotación: q</p>
     </div>
